Workign on Rotor Clas

--- a/properties.yml
+++ b/properties.yml
@@ -1,5 +1,14 @@
-Wheel1Input: ABCDEFGHIJKLMNOPQRSTUVWXYZ
-Wheel1Output: QWERTYUIOPASDFGHJKLZXCVBNM
-Wheel2Input: ABCDEFGHIJKLMNOPQRSTUVWXYZ
-Wheel2Output: MNBVCXZLKJHGFDSAPOIUYTREWQ
-Wheel1Index: 23
+Rotor I Input: ABCDEFGHIJKLMNOPQRSTUVWXYZ
+Rotor I Output: QWERTYUIOPASDFGHJKLZXCVBNM
+Rotor I Notch: 18
+
+Rotor II Input: ABCDEFGHIJKLMNOPQRSTUVWXYZ
+Rotor II Output: MNBVCXZLKJHGFDSAPOIUYTREWQ
+Rotor II Notch: 6
+
+Rotor III Input: QWERTYUIOPLKJHGFDSAZXCVBNM
+Rotor III Output: MNBVCXZASDFGHJKLPOIUYTREWQ
+Rotor III Notch: 2
+
+Reflector In: ABCDEFGHIJKLMNOPQRSTUVWXYZ
+Reflector Out: CDEFGHIJKLMNOPQRSTUVWXYZAB
