--- a/properties.yml
+++ b/properties.yml
@@ -1,14 +1,18 @@
 Rotor I Input: ABCDEFGHIJKLMNOPQRSTUVWXYZ
-Rotor I Output: QWERTYUIOPASDFGHJKLZXCVBNM
+Rotor I Output: WUYJSNQHLVTMDGIBCAKZXEPORF
 Rotor I Notch: 18
 
 Rotor II Input: ABCDEFGHIJKLMNOPQRSTUVWXYZ
-Rotor II Output: MNBVCXZLKJHGFDSAPOIUYTREWQ
+Rotor II Output: ZSFBYXHONREGKJPTVDUQWIALMC
 Rotor II Notch: 6
 
 Rotor III Input: QWERTYUIOPLKJHGFDSAZXCVBNM
-Rotor III Output: MNBVCXZASDFGHJKLPOIUYTREWQ
+Rotor III Output: ZRUMKLBQDHGYEXFWOTANJVPISC
 Rotor III Notch: 2
 
+Rotor IV Input: WFOXDSTAQCMKYPNIZVBURJHEGL
+Rotor IV Output: OGTYPVKUIRQHJALMEWZSDXBFNC
+Rotor IV Notch: 12
+
 Reflector In: ABCDEFGHIJKLMNOPQRSTUVWXYZ
-Reflector Out: CDEFGHIJKLMNOPQRSTUVWXYZAB
+Reflector Out: PQZOJIKNHMVRLGCEXTDASBFUYW
