--- a/properties.yml
+++ b/properties.yml
@@ -1,18 +1,18 @@
 Rotor I Input: ABCDEFGHIJKLMNOPQRSTUVWXYZ
-Rotor I Output: WUYJSNQHLVTMDGIBCAKZXEPORF
+Rotor I Output: LUSHQOXDMZNAIKFREPCYBWVGTJ
 Rotor I Notch: 18
 
 Rotor II Input: ABCDEFGHIJKLMNOPQRSTUVWXYZ
 Rotor II Output: ZSFBYXHONREGKJPTVDUQWIALMC
 Rotor II Notch: 6
 
-Rotor III Input: QWERTYUIOPLKJHGFDSAZXCVBNM
+Rotor III Input: ABCDEFGHIJKLMNOPQRSTUVWXYZ
 Rotor III Output: ZRUMKLBQDHGYEXFWOTANJVPISC
 Rotor III Notch: 2
 
-Rotor IV Input: WFOXDSTAQCMKYPNIZVBURJHEGL
+Rotor IV Input: ABCDEFGHIJKLMNOPQRSTUVWXYZ
 Rotor IV Output: OGTYPVKUIRQHJALMEWZSDXBFNC
 Rotor IV Notch: 12
 
-Reflector In: ABCDEFGHIJKLMNOPQRSTUVWXYZ
-Reflector Out: PQZOJIKNHMVRLGCEXTDASBFUYW
+Reflector In: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25]
+Reflector Out: [9, 10, 5, 17, 0, 8, 3, 15, 12, 13, 23, 24, 25, 6, 7, 18, 2, 11, 4, 14, 21, 16, 22, 19, 1]
